--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,5 @@
 @import url('./styles/header.css');
 @import url('./styles/cards.css');
 @import url('./styles/card.css');
+@import url('./styles/loading.css');
+@import url('./styles/no-data.css');
